# pythonfacebook

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/pythonfacebook/: endpoints.py  enums.py  exceptions.py  facebook.py
tests/: test_facebook.py
