[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-facebook-lite"
version = "0.1.2"
description = "A simple Facebook interaction library."
authors = [
  { name = "Vlad Andrei", email = "contact@vlad.my" }
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "requests"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/vladmycode/pythonfacebook"
Repository = "https://github.com/vladmycode/pythonfacebook"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
